@@ -1,5 +1,7 @@
 2006-04-13 Sandro Santilli <strk@refractions.net>
 
+	* tests/units/io/WKBReaderTest.cpp: forced NDR output
+	  for WKBWriter tests, removed CRs endings.
 	* geos::simplify::TopologyPreservingSimplifier class
 	* geos::simplify::TaggedLinesSimplifier class
 	* source/geom/GeometryComponentFilter.cpp: filter_ro
